[package]
name = "tricoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.30"
anyhow = "1.0.51"
rayon = "1.5"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"]}
serde = { version = "1", features = ["derive"]}
futures = "0.3"
tokio-stream = "0.1"
clap = "2.34.0"
log = "0.4.14"
env_logger = "0.9.0"